--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/cardView"
     tools:context=".CardFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -23,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
+                android:contentDescription="@string/imageview_adapter_text"
                 android:src="@drawable/lib1" />
 
             <TextView
@@ -30,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Card title" />
+                android:text="@string/Card_title_text" />
 
             <TextView
                 style="@style/TextAppearance.AppCompat.Body1"
@@ -38,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum." />
+                android:text="@string/Lorem_ipsum" />
 
             <!--style="@style/ButtonStyle"-->
             <!--<Button
@@ -53,8 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|start"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="-5dp"
+            android:contentDescription="@string/imageview_adapter_text"
             android:src="@drawable/ic_book_mark" />
 
     </FrameLayout>
