--- a/app/src/main/res/layout/book_grid_item.xml
+++ b/app/src/main/res/layout/book_grid_item.xml
@@ -12,8 +12,7 @@
         android:id="@+id/relative_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        >
+        android:layout_centerHorizontal="true">
 
         <RelativeLayout
             android:layout_marginTop="5dp"
@@ -29,7 +28,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_add_book"
-            android:background="@drawable/roudend_image_button"/>
+            android:background="@drawable/roudend_image_button"
+            android:contentDescription="@string/imageview_adapter_text" />
 
 
         <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
