--- a/app/src/main/res/layout/book_readed_popup.xml
+++ b/app/src/main/res/layout/book_readed_popup.xml
@@ -46,7 +46,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/margin_10dp"
                 android:layout_marginTop="@dimen/margin_10dp"
-                android:src="@drawable/ic_close_arrow"/>
+                android:src="@drawable/ic_close_arrow"
+                android:contentDescription="@string/imageview_adapter_text" />
 
         </LinearLayout>
 
@@ -65,8 +66,8 @@
             android:id="@+id/info_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BookTitle"
-            android:textSize="25dp"
+            android:text="@string/booktitle_text"
+            android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
             android:layout_marginTop="5dp"
@@ -147,7 +148,8 @@
                         android:id="@+id/star1"
                         android:tag="1"
                         android:src="@drawable/ic_empty_star"
-                        android:layout_marginBottom="5dp"/>
+                        android:layout_marginBottom="5dp"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -181,7 +183,8 @@
                         android:id="@+id/star2"
                         android:tag="2"
                         android:src="@drawable/ic_empty_star"
-                        android:layout_marginBottom="5dp"/>
+                        android:layout_marginBottom="5dp"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -215,7 +218,8 @@
                         android:id="@+id/star3"
                         android:tag="3"
                         android:src="@drawable/ic_empty_star"
-                        android:layout_marginBottom="5dp"/>
+                        android:layout_marginBottom="5dp"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -250,7 +254,8 @@
                         android:id="@+id/star4"
                         android:tag="4"
                         android:src="@drawable/ic_empty_star"
-                        android:layout_marginBottom="5dp"/>
+                        android:layout_marginBottom="5dp"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -285,7 +290,8 @@
                         android:id="@+id/star5"
                         android:tag="5"
                         android:src="@drawable/ic_empty_star"
-                        android:layout_marginBottom="5dp"/>
+                        android:layout_marginBottom="5dp"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -300,6 +306,7 @@
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
+
         </LinearLayout>
 
         <TextView
@@ -357,7 +364,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/happy"/>
+                        android:src="@drawable/happy"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -387,7 +395,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/confused"/>
+                        android:src="@drawable/confused"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -417,7 +426,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/unhappy"/>
+                        android:src="@drawable/unhappy"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -447,7 +457,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/scare"/>
+                        android:src="@drawable/scare"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -488,7 +499,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/angry"/>
+                        android:src="@drawable/angry"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -518,7 +530,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/surprised"/>
+                        android:src="@drawable/surprised"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -548,7 +561,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/excited"/>
+                        android:src="@drawable/excited"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -578,7 +592,8 @@
                         android:layout_width="@dimen/emoji_size"
                         android:layout_height="@dimen/emoji_size"
                         android:orientation="horizontal"
-                        android:src="@drawable/bored"/>
+                        android:src="@drawable/bored"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -592,9 +607,8 @@
 
                 </androidx.cardview.widget.CardView>
 
-
-
             </LinearLayout>
+
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
@@ -622,18 +636,20 @@
                         android:backgroundTint="@color/colorGrayCardBackground"
                         android:src="@drawable/chat"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginEnd="5dp"/>
+                        android:layout_marginEnd="5dp"
+                        android:contentDescription="@string/imageview_adapter_text" />
 
                     <TextView
                         android:id="@+id/comments_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/TextAppearance.AppCompat.Title"
-                        android:textSize="25dp"
-                        android:text="9"
+                        android:textSize="25sp"
+                        android:text="@string/numExample"
                         android:layout_gravity="center_vertical"/>
 
                 </LinearLayout>
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -662,11 +678,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/TextAppearance.AppCompat.Title"
-                        android:textSize="25dp"
+                        android:textSize="25sp"
                         android:text="@string/cancel_upper_case"
                         android:layout_gravity="center_vertical"/>
 
                 </LinearLayout>
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
