--- a/app/src/main/res/layout/cardview_template.xml
+++ b/app/src/main/res/layout/cardview_template.xml
@@ -49,13 +49,16 @@
                     android:layout_centerVertical="true"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:text="Biography"
+                    android:text="@string/example_text"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
             </RelativeLayout>
+
         </LinearLayout>
+
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
