--- a/app/src/main/res/layout/first_form_done.xml
+++ b/app/src/main/res/layout/first_form_done.xml
@@ -66,18 +66,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
-            android:padding="10dp"
             android:layout_marginBottom="10dp"
-            android:orientation="vertical">
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <Button
                 android:id="@+id/buttonFirstFormDone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Done"/>
+                android:text="@string/done_text" />
 
         </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
