--- a/app/src/main/res/layout/first_form_genres.xml
+++ b/app/src/main/res/layout/first_form_genres.xml
@@ -5,95 +5,97 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10sp"
+        android:orientation="vertical"
+        android:weightSum="21"
+        tools:context=".FirstTimeForm.FirstTimeFormActivity">
+
+        <!-- Skip the form -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="end">
+
+            <TextView
+                android:id="@+id/textSkipFirstForm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/skip_first_form_message"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+        <!-- Head -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+            <TextView
+                android:id="@+id/titleFirstForm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/select_genres_first_form_title"
+                android:textColor="@android:color/black"
+                android:textSize="34sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+        <!-- Description of this activity -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10sp"
+            android:layout_height="0dp"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/description_form_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description_first_form_text"
+                android:textColor="@android:color/black" />
+
+            <ImageView
+                android:id="@+id/imageViewSeparator"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8sp"
+                android:layout_marginBottom="8sp"
+                android:contentDescription="@string/separator_text"
+                android:scaleType="fitXY"
+                android:src="@android:drawable/divider_horizontal_bright" />
+
+            <TextView
+                android:id="@+id/description_first_activity_form_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/select_genres_first_form_text"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="13"
             android:orientation="vertical"
-            android:weightSum="21"
-            tools:context=".FirstTimeForm.FirstTimeFormActivity">
-
-            <!-- Skip the form -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="end">
-
-                <TextView
-                    android:id="@+id/textSkipFirstForm"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="@string/skip_first_form_message"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-
-            <!-- Head -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2">
-
-                <TextView
-                    android:id="@+id/titleFirstForm"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/select_genres_first_form_title"
-                    android:textColor="@android:color/black"
-                    android:textSize="34sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-
-            <!-- Description of this activity -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="4"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/description_form_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/description_first_form_text"
-                    android:textColor="@android:color/black" />
-
-                <ImageView
-                    android:id="@+id/imageViewSeparator"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8sp"
-                    android:layout_marginBottom="8sp"
-                    android:contentDescription="@string/separator_text"
-                    android:scaleType="fitXY"
-                    android:src="@android:drawable/divider_horizontal_bright" />
-
-                <TextView
-                    android:id="@+id/description_first_activity_form_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/select_genres_first_form_text"
-                    android:textColor="@android:color/black" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="13"
-                android:padding="4dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical">
+            android:padding="4dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewGenres"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
-            </LinearLayout>
         </LinearLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
