--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_discover"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_discover"
     tools:context=".Discover.DiscoverFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,62 +13,64 @@
         android:text="vergggggga" /-->
 
     <LinearLayout
-        android:orientation="horizontal"
         android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Title"
             android:id="@+id/info_text"
+            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/last_added"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlack"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"/>
+            android:text="@string/last_added"
+            android:textColor="@color/colorBlack"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/linearLayout"
-            android:gravity="right">
-
+            android:gravity="end"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/searchIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:contentDescription="@string/imageview_adapter_text"
                 android:foregroundGravity="right"
                 android:src="@drawable/ic_search_button" />
+
         </LinearLayout>
+
     </LinearLayout>
 
     <ScrollView
-        android:layout_below="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relative_layout">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/linear">
 
-            <androidx.cardview.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        <RelativeLayout
+            android:id="@+id/relative_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view"
-                android:layout_gravity="top"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:layout_gravity="top"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginBottom="15dp"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardBackgroundColor="@color/colorGrayCardBackground">
+                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
+                card_view:cardCornerRadius="4dp">
 
 
                 <androidx.viewpager.widget.ViewPager
@@ -78,53 +80,51 @@
                     android:layout_gravity="bottom"
                     android:clipToPadding="false"
                     android:overScrollMode="never"
-                    android:paddingEnd="@dimen/card_padding"
+                    android:paddingStart="@dimen/card_padding"
                     android:paddingLeft="@dimen/card_padding"
-                    android:paddingRight="@dimen/card_padding"
-                    android:paddingStart="@dimen/card_padding" />
+                    android:paddingEnd="@dimen/card_padding"
+                    android:paddingRight="@dimen/card_padding" />
             </androidx.cardview.widget.CardView>
 
             <TextView
-                style="@style/TextAppearance.AppCompat.Title"
                 android:id="@+id/info_text_top_rated"
-                android:layout_below="@+id/card_view"
+                style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/top_rated"
-                android:textSize="@dimen/text_size"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlack"
+                android:layout_below="@+id/card_view"
+                android:layout_marginStart="@dimen/margin_5dp"
                 android:layout_marginTop="@dimen/margin_5dp"
-                android:layout_marginStart="@dimen/margin_5dp"/>
+                android:text="@string/top_rated"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/text_size"
+                android:textStyle="bold" />
 
-            <androidx.cardview.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_top_rated"
-                android:layout_below="@+id/info_text_top_rated"
-                android:layout_gravity="top"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/card_height"
+                android:layout_below="@+id/info_text_top_rated"
+                android:layout_gravity="top"
                 android:layout_marginStart="@dimen/margin_5dp"
-                android:layout_marginEnd="@dimen/margin_5dp"
                 android:layout_marginTop="@dimen/margin_5dp"
+                android:layout_marginEnd="@dimen/margin_5dp"
                 android:layout_marginBottom="@dimen/margin_5dp"
-                card_view:cardCornerRadius="@dimen/card_corner_radius"
-                card_view:cardBackgroundColor="@color/colorGrayCardBackground">
+                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
+                card_view:cardCornerRadius="@dimen/card_corner_radius">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/top_rated_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/margin_10dp"
-                    android:layout_marginBottom="@dimen/margin_10dp"
                     android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginEnd="@dimen/margin_5dp"/>
+                    android:layout_marginTop="@dimen/margin_10dp"
+                    android:layout_marginEnd="@dimen/margin_5dp"
+                    android:layout_marginBottom="@dimen/margin_10dp" />
+
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
+
     </ScrollView>
-
-
 
 </RelativeLayout>
