--- a/app/src/main/res/layout/fragment_search_book.xml
+++ b/app/src/main/res/layout/fragment_search_book.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".SearchBookFragment"
     tools:actionBarNavMode="standard"
-    android:backgroundTint="@color/colorPrimaryDark">
+    tools:context=".SearchBookFragment">
 
     <!--androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -21,40 +21,40 @@
             android:layout_marginTop="5dp"
             android:src="@drawable/ic_go_back_button"/>
 
-
     </androidx.appcompat.widget.Toolbar-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:backgroundTint="@color/cardview_light_background">
+        android:backgroundTint="@color/cardview_light_background"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:backgroundTint="@color/cardview_light_background">
+            android:backgroundTint="@color/cardview_light_background"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/go_back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_go_back_button"/>
+                android:src="@drawable/ic_go_back_button"
+                android:contentDescription="@string/imageview_adapter_text" />
 
             <SearchView
                 android:id="@+id/search_bar"
                 android:layout_width="match_parent"
-                android:iconifiedByDefault="false"
-                android:queryHint="@string/search_bar"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:layout_marginEnd="5dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:iconifiedByDefault="false"
+                android:queryHint="@string/search_bar" />
 
         </LinearLayout>
 
@@ -62,12 +62,11 @@
             android:id="@+id/books_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp" />
 
     </LinearLayout>
-
 
 </LinearLayout>
