--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/margin_5dp"
     android:layout_marginTop="@dimen/margin_5dp"
     android:layout_marginEnd="@dimen/margin_5dp"
-    android:layout_marginStart="@dimen/margin_5dp"
-    android:layout_marginBottom="@dimen/margin_5dp">
+    android:layout_marginBottom="@dimen/margin_5dp"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -23,28 +23,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="@dimen/margin_5dp">
+                android:layout_margin="@dimen/margin_5dp"
+                android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_image"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/user1"
-                    android:layout_centerHorizontal="true"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="#FFF"/>
+                    app:civ_border_color="#FFF"
+                    app:civ_border_width="2dp" />
 
                 <TextView
                     android:id="@+id/user_name"
                     style="@style/TextAppearance.AppCompat.Title"
-                    android:layout_margin="@dimen/margin_5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pedro jota"
-                    android:textColor="@color/colorBlack"
                     android:layout_gravity="center_vertical"
-                    android:textStyle="bold"/>
+                    android:layout_margin="@dimen/margin_5dp"
+                    android:text="@string/example_text"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold" />
+
             </LinearLayout>
 
             <ScrollView
@@ -52,14 +52,15 @@
                 android:layout_height="wrap_content">
 
                 <me.biubiubiu.justifytext.library.JustifyTextView
-                    android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
                     android:id="@+id/user_comment"
-                    android:text="Este es un comentario de prueba pagado por Adobe Acrobar features."
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_5dp"
+                    android:layout_marginBottom="@dimen/margin_5dp"
+                    android:text="@string/Lorem_ipsum"
                     android:textColor="@color/colorBlack"
-                    android:textSize="12dp"/>
+                    android:textSize="12sp" />
+
             </ScrollView>
 
             <!--TextView
@@ -71,6 +72,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
