--- a/app/src/main/res/layout/reviews_layout.xml
+++ b/app/src/main/res/layout/reviews_layout.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:tag="reviews_fragment"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:tag="reviews_fragment">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="start">
+            android:gravity="start"
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/close_arrow"
-                android:background="@color/cardview_light_background"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/margin_10dp"
                 android:layout_marginTop="@dimen/margin_10dp"
-                android:src="@drawable/ic_close_arrow"/>
+                android:background="@color/cardview_light_background"
+                android:contentDescription="@string/imageview_adapter_text"
+                android:src="@drawable/ic_close_arrow" />
 
             <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_review_button"
@@ -38,17 +39,17 @@
         </LinearLayout>
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Title"
             android:id="@+id/info_text"
+            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/comments"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlack"
-            android:layout_marginTop="5dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="5dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_marginTop="5dp"
+            android:text="@string/comments"
+            android:textColor="@color/colorBlack"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <!--LinearLayout
             android:orientation="horizontal"
@@ -73,47 +74,48 @@
 
     <ScrollView
         android:id="@+id/scroll_view"
-        android:layout_below="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/linear"
         android:layout_marginStart="@dimen/margin_10dp"
         android:layout_marginTop="@dimen/margin_10dp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/comments_recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="10dp" />
+
         </LinearLayout>
 
     </ScrollView>
 
     <LinearLayout
         android:id="@+id/comment_layout"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/margin_5dp"
         android:layout_marginTop="@dimen/margin_5dp"
         android:layout_marginEnd="@dimen/margin_5dp"
-        android:layout_marginStart="@dimen/margin_5dp"
-        android:layout_marginBottom="@dimen/margin_5dp">
+        android:layout_marginBottom="@dimen/margin_5dp"
+        android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -122,12 +124,12 @@
             app:cardCornerRadius="5dp">
 
             <androidx.cardview.widget.CardView
-                android:layout_margin="1dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:backgroundTint="@color/colorDarkGrayCardBackground"
-                app:cardElevation="20dp"
-                app:cardCornerRadius="4dp">
+                app:cardCornerRadius="4dp"
+                app:cardElevation="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -137,27 +139,27 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_margin="@dimen/margin_5dp">
+                        android:layout_margin="@dimen/margin_5dp"
+                        android:orientation="horizontal">
 
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/profile_image"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:src="@drawable/user1"
-                            android:layout_centerHorizontal="true"
-                            app:civ_border_width="2dp"
-                            app:civ_border_color="#FFF"/>
+                            app:civ_border_color="#FFF"
+                            app:civ_border_width="2dp" />
 
                         <TextView
                             android:id="@+id/user_name"
                             style="@style/TextAppearance.AppCompat.Title"
-                            android:layout_margin="@dimen/margin_5dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/colorBlack"
                             android:layout_gravity="center_vertical"
-                            android:textStyle="bold"/>
+                            android:layout_margin="@dimen/margin_5dp"
+                            android:textColor="@color/colorBlack"
+                            android:textStyle="bold" />
+
                     </LinearLayout>
 
                     <ScrollView
@@ -177,31 +179,32 @@
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/colorBlack"
                                 android:textSize="12dp"/-->
+
                             <EditText
-                                android:gravity="center_horizontal"
                                 android:id="@+id/edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginEnd="25dp"
+                                android:gravity="center_horizontal"
                                 android:hint="Añade un comentario"
-                                android:inputType="text"
                                 android:imeOptions="actionSend"
-                                android:layout_marginEnd="25dp"/>
+                                android:inputType="text" />
 
                             <ImageButton
-                                android:layout_marginStart="@dimen/margin_5dp"
-                                android:layout_alignEnd="@+id/edit_text"
                                 android:id="@+id/send_comment"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:layout_marginEnd="@dimen/margin_5dp"
-                                android:layout_marginBottom="@dimen/margin_5dp"
-                                android:src="@drawable/send_arrow_icon"
+                                android:layout_alignEnd="@+id/edit_text"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentBottom="true"
-                                android:background="@color/colorDarkGrayCardBackground"/>
-
+                                android:layout_marginStart="@dimen/margin_5dp"
+                                android:layout_marginEnd="@dimen/margin_5dp"
+                                android:layout_marginBottom="@dimen/margin_5dp"
+                                android:background="@color/colorDarkGrayCardBackground"
+                                android:src="@drawable/send_arrow_icon" />
 
                         </RelativeLayout>
+
                     </ScrollView>
 
                     <!--TextView
@@ -210,13 +213,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="12dp"/-->
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
         </androidx.cardview.widget.CardView>
-
-
 
     </LinearLayout>
 
