Add book from Library bug fixed

--- a/app/src/main/res/layout/book_readed_popup.xml
+++ b/app/src/main/res/layout/book_readed_popup.xml
@@ -63,7 +63,7 @@
 
         <TextView
             style="@style/TextAppearance.AppCompat.Title"
-            android:id="@+id/info_text"
+            android:id="@+id/book_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/booktitle_text"
@@ -336,331 +336,6 @@
                 android:layout_marginEnd="@dimen/margin_5dp"
                 android:layout_marginBottom="@dimen/margin_5dp"/>
 
-            <!--<LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginBottom="@dimen/margin_20dp"
-                android:layout_marginStart="@dimen/margin_10dp"
-                android:layout_marginEnd="@dimen/margin_10dp">
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-<<<<<<< HEAD
-                    card_view:cardBackgroundColor="@color/colorBlack">
-
-                    <androidx.cardview.widget.CardView
-                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/card_view_copy"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        card_view:cardCornerRadius="4dp"
-                        card_view:cardElevation="@dimen/margin_10dp"
-                        card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                        <ImageButton
-                            android:backgroundTint="@color/colorGrayCardBackground"
-                            android:layout_width="@dimen/emoji_size"
-                            android:layout_height="@dimen/emoji_size"
-                            android:orientation="horizontal"
-                            android:src="@drawable/angry"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/emoji_text_size"
-                            android:text="@string/angry_emoji"
-                            android:textStyle="bold"
-                            android:textColor="@color/colorBlack"
-                            android:layout_gravity="bottom|center_horizontal"
-                            android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                    </androidx.cardview.widget.CardView>
-=======
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-                        android:src="@drawable/happy"
-                        android:contentDescription="@string/imageview_adapter_text" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/happy_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
->>>>>>> master
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-<<<<<<< HEAD
-                        android:src="@drawable/scare"/>
-=======
-                        android:src="@drawable/confused"
-                        android:contentDescription="@string/imageview_adapter_text" />
->>>>>>> master
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/scared_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-                        android:src="@drawable/unhappy"
-                        android:contentDescription="@string/imageview_adapter_text" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/sad_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-<<<<<<< HEAD
-                        android:src="@drawable/confused"/>
-=======
-                        android:src="@drawable/scare"
-                        android:contentDescription="@string/imageview_adapter_text" />
->>>>>>> master
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/confused_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="@dimen/margin_20dp"
-                android:layout_marginStart="@dimen/margin_10dp"
-                android:layout_marginEnd="@dimen/margin_10dp">
-
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-<<<<<<< HEAD
-                        android:src="@drawable/bored"/>
-=======
-                        android:src="@drawable/angry"
-                        android:contentDescription="@string/imageview_adapter_text" />
->>>>>>> master
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/bored_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view5"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-                        android:src="@drawable/surprised"
-                        android:contentDescription="@string/imageview_adapter_text" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/shocked_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view6"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-<<<<<<< HEAD
-                        android:src="@drawable/happy"/>
-=======
-                        android:src="@drawable/excited"
-                        android:contentDescription="@string/imageview_adapter_text" />
->>>>>>> master
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/happy_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view7"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardBackgroundColor="@color/colorGrayCardBackground">
-
-                    <ImageButton
-                        android:backgroundTint="@color/colorGrayCardBackground"
-                        android:layout_width="@dimen/emoji_size"
-                        android:layout_height="@dimen/emoji_size"
-                        android:orientation="horizontal"
-<<<<<<< HEAD
-                        android:src="@drawable/excited"/>
-=======
-                        android:src="@drawable/bored"
-                        android:contentDescription="@string/imageview_adapter_text" />
->>>>>>> master
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/emoji_text_size"
-                        android:text="@string/excited_emoji"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="@dimen/margin_5dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-<<<<<<< HEAD
-
-
-            </LinearLayout>-->
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
