--- a/app/src/main/res/layout/reviews_layout.xml
+++ b/app/src/main/res/layout/reviews_layout.xml
@@ -71,42 +71,64 @@
         </LinearLayout-->
     </LinearLayout>
 
-
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear"
-        android:layout_marginStart="@dimen/margin_10dp"
-        android:layout_marginTop="@dimen/margin_10dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/linear">
 
-        <LinearLayout
+        <ScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_10dp"
+            android:layout_marginTop="@dimen/margin_10dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/comments_recyclerView"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="10dp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="10dp" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/comments_recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp" />
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_alignBottom="@+id/comments_recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp" />
+            </RelativeLayout>
 
-    </ScrollView>
+        </ScrollView>
 
-    <LinearLayout
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_comment_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/chat"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/margin_5dp"
+            android:layout_marginBottom="@dimen/margin_10dp"
+            android:background="@color/colorBlank"
+            android:backgroundTint="@color/colorBlank"
+            app:rippleColor="@color/colorBlack"
+            app:borderWidth="0dp"/>
+        
+
+    </RelativeLayout>
+
+
+    <!--LinearLayout
         android:id="@+id/comment_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -170,15 +192,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <!--me.biubiubiu.justifytext.library.JustifyTextView
-                                android:layout_marginStart="@dimen/margin_5dp"
-                                android:layout_marginBottom="@dimen/margin_5dp"
-                                android:id="@+id/user_comment"
-                                android:text="Este es un comentario de prueba pagado por Adobe Acrobar features."
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/colorBlack"
-                                android:textSize="12dp"/-->
+
 
                             <EditText
                                 android:id="@+id/edit_text"
@@ -207,12 +221,6 @@
 
                     </ScrollView>
 
-                    <!--TextView
-                        android:id="@+id/user_comment"
-                        android:text="Este es un comentario de prueba pagado por Adobe Acrobar features."
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="12dp"/-->
 
                 </LinearLayout>
 
@@ -220,6 +228,6 @@
 
         </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+    </LinearLayout-->
 
 </RelativeLayout>
