Create a login layout that contains an icon, name and animated background

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
         <item name="colorPrimaryDark">@android:color/transparent</item>
     </style>
 
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/colorProgressBar</item>
+    </style>
+
 </resources>
